--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "license": "MIT",
   "author": "Martín Ponce",
   "type": "module",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon api/server.js",
-    "start": "node api/server.js",
+    "dev": "nodemon api/index.js",
+    "start": "node api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
